# SolQueue

./: .gitignore  .vercelignore  Anchor.toml  Cargo.toml  LICENSE  README.md  ROADMAP.md  build.bat  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
.cargo/: config.toml
cli/: index.js
docs/: API.md  ARCHITECTURE.md  CLI_REFERENCE.md  DEPLOY_GUIDE.md  SDK_GUIDE.md  WEB2_VS_SOLANA.md
migrations/: deploy.ts
programs/solqueue/: Cargo.toml
programs/solqueue/src/: errors.rs  lib.rs  state.rs
programs/solqueue/src/instructions/: claim_job.rs  complete_job.rs  create_queue.rs  deregister_worker.rs  fail_job.rs  mod.rs  pause_queue.rs  register_worker.rs  retry_job.rs  submit_job.rs
scripts/: deploy-devnet.ps1  generate-devnet-demo-txs.mjs  install-tools.sh
src/: main.js
src/animations/: pipeline.js  three-bg.js
src/pages/: dashboard.js  landing.js
src/sdk/: idl.json  index.js
src/styles/: dashboard.css  global.css  landing.css  wallet.css
src/utils/: data-service.js  mock-data.js  router.js  wallet-adapter.js
tests/: solqueue.ts
