[package]
name = "solqueue"
version = "0.1.0"
description = "On-chain job queue system for Solana — rebuilding backend message queue patterns"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solqueue"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.30.1"
